--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=f405cfc76a110569053194dac981e6b6
+APP_SECRET=ca0b28a5dc8794c9b2d766d494d72604
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
@@ -27,6 +27,6 @@ APP_SECRET=f405cfc76a110569053194dac981e6b6
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root:root1453@127.0.0.1:3306/polar?serverVersion=5.7"
+# DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
