--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
         "phpstan/phpstan-doctrine": "^1.0",
         "phpstan/phpstan-symfony": "^1.0",
         "phpunit/phpunit": "^9.5",
+        "sempro/phpunit-pretty-print": "^1.4",
         "symfony/browser-kit": "5.3.*",
         "symfony/css-selector": "5.3.*",
         "symfony/debug-bundle": "5.3.*",
