--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,9 @@ jobs:
           php bin/console doctrine:schema:update --force
           php bin/console doctrine:fixtures:load -n
       - name: Run fonctional test
-        run: php vendor/bin/phpunit
+        run: |
+        php vendor/bin/phpunit
+        make test
       - name: Analyze coding style
         run: make style
       - name: Analyse Static Code
